<?xml version="1.0"?>
<package>
  <name>lj_laser_heading</name>
  <version>0.1.3</version>
  <description>Localizing jockey from LaserScan and absolute heading.
    Implements a localizing jockey from a LaserScan and absolute heading.
    The associated descriptors are sensor_msgs/LaserScan[] and
    lama_msgs/Crossing.
  </description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/lj_laser_heading</url>
  <url type="repository">https://github.com/lama-imr/lama_laser.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_laser/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>lj_laser</build_depend>
  <build_depend>nav_msgs</build_depend>

  <run_depend>geometry_msgs</run_depend>
  <run_depend>lj_laser</run_depend>
  <run_depend>nav_msgs</run_depend>


  <export>
  </export>
</package>
