<?xml version="1.0"?>
<package>
  <name>lj_laser</name>
  <version>0.1.3</version>
  <description>Localizing jockey from LaserScan

	  Implement a localizing jockey from a LaserScan. The associated descriptor
	  are LaserScan[] and Crossing.
  </description>

  <maintainer email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</maintainer>


  <license>BSD</license>


  <url type="website">http://wiki.ros.org/lj_laser</url>
  <url type="repository">https://github.com/lama-imr/lama_laser.git</url>
  <url type="bugtracker">https://github.com/lama-imr/lama_laser/issues</url>


  <author email="gael.ecorchard@ciirc.cvut.cz">Gaël Ecorchard</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>crossing_detector</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>lama_common</build_depend>
  <build_depend>lama_interfaces</build_depend>
  <build_depend>lama_jockeys</build_depend>
  <build_depend>lama_msgs</build_depend>
  <build_depend>polygon_matcher</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>crossing_detector</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>lama_common</run_depend>
  <run_depend>lama_interfaces</run_depend>
  <run_depend>lama_jockeys</run_depend>
  <run_depend>lama_msgs</run_depend>
  <run_depend>polygon_matcher</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>


  <export>
  </export>
</package>
